tests/baselines/reference/parserSkippedTokens10.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens10.ts(1,1): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens10.ts(2,1): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens10.ts (2 errors) ====
    \
    
!!! error TS1127: Invalid character.
    \
    
!!! error TS1127: Invalid character.
    /*existing trivia*/ ;
    